--- a/src/components/Cases/Cases.component.css
+++ b/src/components/Cases/Cases.component.css
@@ -321,5 +321,5 @@
 
 
 .ant-card-body {
-  padding: 0 !important;
+  /*padding: 0 !important;*/
 }
